# CodingChallengesFYI.CCWEBSERVER-cpp

./: CMakeLists.txt  README.md  build.sh  doRequests.sh
include/cliArgs/: options.hpp
include/global/: globalEnvironment.hpp
include/network/http/: request.hpp  response.hpp  statusCodes.hpp
include/network/servers/: libServers.hpp  server.hpp  webServer.hpp
include/network/sockets/: bindingSocket.hpp  libSockets.hpp  listeningSocket.hpp  socket.hpp
include/tests/: globalTestEnvironment.hpp
src/: CMakeLists.txt  main.cpp
src/cliArgs/: options.cpp
src/network/http/: request.cpp  response.cpp  statusCodes.cpp
src/network/servers/: server.cpp  webServer.cpp
src/network/sockets/: bindingSocket.cpp  listeningSocket.cpp  socket.cpp
tests/: CMakeLists.txt  globalTestEnvironment.cpp  globalTests.cpp
tests/network/sockets/: bindingSocketTests.cpp  listeningSocketTests.cpp  socketTests.cpp
www/: 404.html  index.html  page1.html
